--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "start": "app.js"
     },
     "dependencies": {
+        "request": "*",
         "express": "3.4.8",
         "request": "~2.12",
         "underscore": ">= 1.5",
