--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "mp.maizs",
-    "description": "mp.maizs qq:7817170",
+    "name": "mp",
+    "description": "",
     "version": "0.0.1",
     "private": true,
     "scripts": {
